@@ -1,5 +1,10 @@
 2008-03-18  Dan Williams  <dcbw@redhat.com>
 
+	* src/vpn-password-dialog.c
+		- (nma_vpn_request_password): handle new GetSecrets return format
+
+2008-03-18  Dan Williams  <dcbw@redhat.com>
+
 	* src/gconf-helpers/gconf-upgrade.c
 		- (try_convert_leap, nm_gconf_migrate_0_7_wireless_security): don't
 			bother trying to convert already converted connections
